# web-task-7

./: config.ini  my_select.py  pyproject.toml  seeds.py
migrations/versions/: 87dda2ff2407_init.py
